# flitz

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
docs/: acceptance_criteria.md  conf.py  index.rst
docs/meta/: acceptance_criteria.md  planned_features.md
docs/user/: customization.md
flitz/: __init__.py  __main__.py  cli.py  config.py  context_menu.py  events.py  file_explorer.py  utils.py
flitz/actions/: __init__.py  copy_paste.py  deletion.py  rename.py  show_properties.py
flitz/file_systems/: __init__.py  basic_fs.py  ftp_fs.py
flitz/frontends/: __init__.py  base.py  tkinter_app.py  tkinter_fe.py
flitz/ui/: __init__.py  details_pane.py  navigation_pane.py  url_pane.py
requirements/: dev.in
tests/: test_main.py
