[project]
name = "flitz"
authors = [{ name = "Martin Thoma", email = "info@martin-thoma.de" }]
maintainers = [{ name = "Martin Thoma", email = "info@martin-thoma.de" }]
requires-python = ">=3.10"
dynamic = ["version"]
readme = "README.md"
description = "Fast Location / Indexing / Traversal Zone."
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]
dependencies = [
  'pillow',
  ]

[project.scripts]
flitz = "flitz.cli:entry_point"

[build-system]
requires = ["flit_core >=3.0,<4"]
build-backend = "flit_core.buildapi"
